--- a/updatecli/values.yaml
+++ b/updatecli/values.yaml
@@ -4,6 +4,6 @@ github:
   email: "updatebot@olblak.com"
   username: "jenkins-infra-bot"
   token: "UPDATECLI_GITHUB_TOKEN"
-  branch: "master"
+  branch: "main"
   owner: "jenkins-infra"
   repository: "docker-packaging"
