--- a/cst.yml
+++ b/cst.yml
@@ -63,7 +63,7 @@ fileExistenceTests:
     isExecutableBy: 'any'
 
 commandTests:
-  - name: "Check that `java` binary for agent processes is present and defaults to JDK17"
+  - name: "Check that `java` 17 binary for agent processes is present"
     command: "/opt/jdk-17/bin/java"
     args: ["--version"]
     expectedOutput: ["Temurin-17"]
