--- a/updatecli/updatecli.d/jenkins-agent-version.yml
+++ b/updatecli/updatecli.d/jenkins-agent-version.yml
@@ -15,10 +15,10 @@ scms:
 sources:
   lastVersion:
     kind: githubrelease
-    name: Get the latest docker-inbound-agent version
+    name: Get the latest version
     spec:
       owner: "jenkinsci"
-      repository: "docker-inbound-agent"
+      repository: "docker-agent"
       token: "{{ requiredEnv .github.token }}"
       username: "{{ .github.username }}"
       versionfilter:
