chore(updatecli) fix JV CLI manifest by updating deprecated directives
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/updatecli.d/jenkins-version.yaml
+++ b/updatecli/updatecli.d/jenkins-version.yaml
@@ -42,9 +42,9 @@ targets:
         matcher: JV_VERSION
     scmid: default
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Bump `jv` CLI (jenkins-version) to {{ source "lastVersion" }}
     spec:
