--- a/cst.yml
+++ b/cst.yml
@@ -70,4 +70,4 @@ commandTests:
   - name: "Check that 'maven' and `java` are present in the PATH and default to JDK11 + 3.8.6"
     command: "mvn"
     args: ["-v"]
-    expectedOutput: ["Java version: 11.", "3.8.6"]
+    expectedOutput: ["Java version: 11.", 3.8.6]
