--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -2,9 +2,9 @@ name: Release Drafter
 on:
   workflow_dispatch:
   push:
-    branches:
-      - main
   release:
+# Only allow 1 release-drafter build at a time to avoid creating multiple "next" releases
+concurrency: "release-drafter"
 jobs:
   update_release_draft:
     runs-on: ubuntu-20.04
