--- a/updatecli/values.yaml
+++ b/updatecli/values.yaml
@@ -1,7 +1,8 @@
 ---
 github:
-  user: "jenkins-infra-updatecli"
-  email: "178728+jenkins-infra-updatecli[bot]@users.noreply.github.com"
+  user: "Jenkins Infra Bot (updatecli)"
+  email: "60776566+jenkins-infra-bot@users.noreply.github.com"
+  username: "jenkins-infra-bot"
   token: "UPDATECLI_GITHUB_TOKEN"
   branch: "main"
   owner: "jenkins-infra"
